--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,9 @@
         </table>
     </div>
 </body>
-<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+<script type="text/javascript" src="node_modules/angular/angular.js"></script>
+<script type="text/javascript" src="node_modules/angular-component-router-active/angular-component-router-active.js"></script>
+<script type="text/javascript" src="node_modules/angular1-component-router/angular_1_router.js"></script>
+<link rel="stylesheet" type="text/css" href="static/bootstrap.min.css">
 <script type="text/javascript" src="./app.js"></script>
 </html>
