--- a/app/static/newch.html
+++ b/app/static/newch.html
@@ -1,1 +1,24 @@
-<h1>ben newch</h1>
+<h1>NewChannel</h1>
+
+<div class="form-group">
+	<label for="radiocevap">New Channel Properties </label>	<br>
+	<input type="radio" name="puan" value="" id="radiocevap" required="required" >Ftp Send Channel<br>
+	<input type="radio" name="puan" value="" id="radiocevap" required="required" >Ftp Gel Channel<br>
+	<input type="radio" name="puan" value="" id="radiocevap" required="required" >Copy And Conversion<br>
+	<input type="radio" name="puan" value="" id="radiocevap" required="required" >E-mail Channel<br>
+
+</div>
+
+<br>
+<div class="CopySet">
+	<input type="radio" name="puan" value="" id="radiocevap" required="required" >Copy Setting From Channel<br><br>
+    <input type="text" name="puan" placeholder="Kanal ismi" required="required">
+
+</div><br>
+<input type="submit" name="submit" class="btn btn-default" value="Gönder">
+
+
+
+
+
+
