--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     </li> 
     <li><a >Logging</a> 
     <ul class="fallback"> 
-      <li><a ui-sref="hello" ui-sref-active="active">Log File Options</a></li> 
+      <li><a ui-sref="logop" ui-sref-active="active">Log File Options</a></li> 
     </ul> 
     </li> 
   </ul> 
